--- a/daily_english/templates/daily_english/index.html
+++ b/daily_english/templates/daily_english/index.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load cache %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -78,11 +79,12 @@
       </div>
     </section>
 
+
+    {% cache 1000 pic %}
     <!-- daily pic -->
     <section class="callout" id="daily-pic" style="background-image:url('https://cn.bing.com/{{ daily_img.img_url }}')">
-
     </section>
-
+    {% endcache %}
 
     <!-- daily english -->
     <section class="content-section" id="portfolio" style="padding-bottom: 3rem" >
